--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
             font-family: 'Bookish Book', Helvetica, Arial, sans-serif;
             background: #ffffff; color: #000000;
             margin: 0; padding: 0; height: 100vh; width: 100vw;
-            overflow: hidden; display: flex; flex-direction: column; align-items: center;
+            overflow: hidden; display: flex; flex-direction: column; 
+            align-items: center;
+            /* 3. Буквы ближе друг к другу по всему сайту */
+            letter-spacing: -0.5px;
         }
 
         #custom-cursor {
@@ -35,24 +38,38 @@
 
         #marquee-text { white-space: nowrap; will-change: transform; }
 
+        /* 2. Заголовок слева, как кнопки */
         .title-wrapper {
             display: flex; align-items: center; gap: 8px;
             position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);
             transition: all 1s cubic-bezier(0.65, 0, 0.35, 1); z-index: 100;
         }
-        /* 2. Поднял заголовок выше (было 60px) */
-        .title-wrapper.moved { top: 45px; }
+        .title-wrapper.moved { 
+            top: 45px; 
+            left: 20px; /* Привязка к левому краю */
+            transform: translate(0, 0); 
+        }
 
         h1 { font-size: 18px; font-weight: bold; text-transform: uppercase; margin: 0; }
         .title-flag { height: 18px; width: auto; opacity: 0; transition: 0.5s; }
         .title-wrapper.moved .title-flag { opacity: 1; }
 
-        /* 2. Поднял основной контент выше (было margin-top 100px) */
         .content-fade { 
             opacity: 0; visibility: hidden; transition: opacity 0.8s ease; 
             padding: 20px; margin-top: 75px; width: 100%; max-width: 500px;
             display: flex; flex-direction: column;
+            align-self: flex-start; margin-left: 0; /* Контент прижат влево */
         }
+        /* Центрируем контейнер на широких экранах, но оставляем текст слева */
+        @media (min-width: 500px) {
+            body { align-items: center; }
+            .content-fade { align-self: center; }
+            .title-wrapper.moved { left: calc(50% - 230px); } 
+        }
+        @media (max-width: 500px) {
+            .title-wrapper.moved { left: 20px; }
+        }
+
         .content-fade.visible { opacity: 1; visibility: visible; }
 
         .link-text {
@@ -62,13 +79,9 @@
         }
         .link-text:hover { color: #666; }
 
-        /* 1. Карусель без пробелов */
         .gallery-container { overflow: hidden; width: 100%; margin-top: 25px; font-size: 0; }
         .gallery { display: flex; width: max-content; will-change: transform; }
-        .gallery img { 
-            width: 300px; height: auto; display: inline-block; 
-            margin: 0; padding: 0; border: none; /* Убраны все отступы */
-        }
+        .gallery img { width: 300px; height: auto; display: inline-block; margin: 0; padding: 0; }
 
         .bottom-bar {
             position: fixed; bottom: 0; left: 0; width: 100%;
@@ -124,15 +137,10 @@
     </div>
 
     <div class="bottom-bar">
-        <div style="display: flex; gap: 8px;">
-            <div class="tooltip-wrapper">
-                <button class="bottom-btn interactive">[ ABOUT ME ]</button>
-                <div class="tooltip-content" id="about-tooltip">19 years / love money / 11 w2026</div>
-            </div>
-            <div class="tooltip-wrapper">
-                <button class="bottom-btn interactive">[ ONLINE ]</button>
-                <div class="tooltip-content">Users online: <span id="online-count">..</span></div>
-            </div>
+        <!-- 1. Убрана кнопка онлайн -->
+        <div class="tooltip-wrapper">
+            <button class="bottom-btn interactive">[ ABOUT ME ]</button>
+            <div class="tooltip-content" id="about-tooltip">19 years / love money / 11 w2026</div>
         </div>
         <div class="tooltip-wrapper">
             <button class="bottom-btn interactive" id="mute-btn-el">[ SOUND: OFF ]</button>
@@ -177,18 +185,21 @@
             }
         }
 
-        let gallerySpeed = 0; // 1. Скорость 0 по умолчанию
-        let marqueePos = window.innerWidth;
+        // 4. Плавный запуск (инерция)
+        let currentSpeed = 0;
+        let targetSpeed = 0;
         let galleryPos = 0;
+        let marqueePos = window.innerWidth;
 
         function startAnimations() {
             function update() {
-                // Движение карусели
-                galleryPos -= gallerySpeed;
+                // Плавное изменение скорости (интерполяция)
+                currentSpeed += (targetSpeed - currentSpeed) * 0.05;
+
+                galleryPos -= currentSpeed;
                 if (Math.abs(galleryPos) >= gallery.offsetWidth / 2) galleryPos = 0;
                 gallery.style.transform = `translateX(${galleryPos}px)`;
 
-                // Движение бегущей строки (всегда идет)
                 marqueePos -= 1.5;
                 if (marqueePos < -marqueeEl.offsetWidth) marqueePos = window.innerWidth;
                 marqueeEl.style.transform = `translateX(${marqueePos}px)`;
@@ -202,15 +213,14 @@
             if (audio.paused) {
                 audio.play();
                 muteBtn.innerText = "[ SOUND: ON ]";
-                gallerySpeed = 1.2; // Запускаем карусель
+                targetSpeed = 1.2; // Целевая скорость
             } else {
                 audio.pause();
                 muteBtn.innerText = "[ SOUND: OFF ]";
-                gallerySpeed = 0; // Останавливаем карусель
+                targetSpeed = 0; // Плавная остановка
             }
         });
 
-        document.getElementById('online-count').innerText = Math.floor(Math.random() * 10) + 5;
         window.onload = typeView;
     </script>
 </body>
