--- a/index.html
+++ b/index.html
@@ -48,18 +48,21 @@
             transform: translate(0, 0); 
         }
 
-        /* 1. Увеличенный заголовок */
         h1 { font-size: 24px; font-weight: bold; text-transform: uppercase; margin: 0; line-height: 1; }
-        .title-flag { height: 22px; width: auto; opacity: 0; transition: 0.5s; }
+
+        /* Плавное появление флага с задержкой */
+        .title-flag { 
+            height: 22px; width: auto; 
+            opacity: 0; 
+            transition: opacity 0.8s ease-in-out; 
+            transition-delay: 1s; /* Появится после того, как текст встанет на место */
+        }
         .title-wrapper.moved .title-flag { opacity: 1; }
 
         .content-fade { 
             opacity: 0; visibility: hidden; transition: opacity 0.8s ease; 
-            padding: 20px; 
-            margin-top: 65px; /* Поближе к заголовку */
-            width: 100%; max-width: 500px;
-            display: flex; flex-direction: column;
-            align-self: flex-start;
+            padding: 20px; margin-top: 65px; width: 100%; max-width: 500px;
+            display: flex; flex-direction: column; align-self: flex-start;
         }
 
         @media (min-width: 500px) {
@@ -69,7 +72,7 @@
         }
         @media (max-width: 500px) {
             .title-wrapper.moved { left: 20px; }
-            h1 { font-size: 22px; } /* Чуть меньше на моб, чтобы влезло */
+            h1 { font-size: 22px; }
             .content-fade { margin-top: 55px; }
         }
 
@@ -82,10 +85,10 @@
         }
         .link-text:hover { color: #666; }
 
-        /* 3. Карусель поменьше */
+        /* Карусель чуть побольше (280px вместо 250px) */
         .gallery-container { overflow: hidden; width: 100%; margin-top: 20px; font-size: 0; }
         .gallery { display: flex; width: max-content; will-change: transform; }
-        .gallery img { width: 250px; height: auto; display: inline-block; margin: 0; padding: 0; }
+        .gallery img { width: 280px; height: auto; display: inline-block; margin: 0; padding: 0; }
 
         .bottom-bar {
             position: fixed; bottom: 0; left: 0; width: 100%;
